// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuggest is rendered 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              placeholder="Filter options"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
          </div>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: unchanged. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuggest props append 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              placeholder="Filter options"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
          </div>
          <span
            class="euiFormControlLayout__append"
          >
            Appended
          </span>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: unchanged. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuggest props isVirtualized 1`] = `
<div
  class="euiSelectable"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              placeholder="Filter options"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
          </div>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: unchanged. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuggest props maxHeight 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              placeholder="Filter options"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
          </div>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: unchanged. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuggest props options common 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              placeholder="Filter options"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
          </div>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: unchanged. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuggest props options standard 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              placeholder="Filter options"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
          </div>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: unchanged. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuggest props remaining EuiFieldSearch props are spread to the search input 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--compressed"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-invalid="true"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFormControlLayout--2icons euiFieldSearch--compressed euiFieldSearch-isClearable euiFieldSearch-isInvalid euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              id="testId"
              name="testName"
              placeholder="Start typing"
              type="search"
              value="Controlled value"
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
            <div
              class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <button
                aria-label="Clear input"
                class="euiFormControlLayoutClearButton euiFormControlLayoutClearButton--small"
                data-test-subj="clearSearchButton"
                type="button"
              >
                <span
                  class="euiFormControlLayoutClearButton__icon"
                  data-euiicon-type="cross"
                />
              </button>
              <span
                color="danger"
                data-euiicon-type="warning"
              />
            </div>
          </div>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: unchanged. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuggest props status status: loading is rendered 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFormControlLayout--1icons euiFieldSearch--fullWidth euiFieldSearch-isLoading euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              placeholder="Filter options"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
            <div
              class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <span
                aria-label="Loading"
                class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
                role="progressbar"
              />
            </div>
          </div>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: loading. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuggest props status status: saved is rendered 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              placeholder="Filter options"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
          </div>
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <span
              class="euiSuggestInput__statusIcon"
              color="success"
              data-euiicon-type="checkInCircleFilled"
            />
          </span>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: saved. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuggest props status status: unchanged is rendered 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              placeholder="Filter options"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
          </div>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: unchanged. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuggest props status status: unsaved is rendered 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              placeholder="Filter options"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
          </div>
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <span
              class="euiSuggestInput__statusIcon"
              color="accent"
              data-euiicon-type="dot"
            />
          </span>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: unsaved. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: loading is rendered 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFormControlLayout--1icons euiFieldSearch--fullWidth euiFieldSearch-isLoading euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              placeholder="Filter options"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
            <div
              class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <span
                aria-label="Loading"
                class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
                role="progressbar"
              />
            </div>
          </div>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: loading. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: saved is rendered 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              placeholder="Filter options"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
          </div>
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <span
              class="euiSuggestInput__statusIcon"
              color="success"
              data-euiicon-type="checkInCircleFilled"
            />
          </span>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: saved. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: unchanged is rendered 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              placeholder="Filter options"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
          </div>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: unchanged. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: unsaved is rendered 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
>
  <div
    class="euiPopover euiInputPopover emotion-euiPopover-EuiInputPopover"
  >
    <div
      class="euiPopover__anchor css-zih94u-render"
    >
      <div>
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-activedescendant=""
              aria-describedby="generated-id_instructions"
              aria-haspopup="listbox"
              aria-label="aria-label"
              autocomplete="off"
              class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
              data-test-subj="test subject string"
              placeholder="Filter options"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <span
                  aria-hidden="true"
                  class="euiFormControlLayoutCustomIcon__icon"
                  data-euiicon-type="search"
                />
              </span>
            </div>
          </div>
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <span
              class="euiSuggestInput__statusIcon"
              color="accent"
              data-euiicon-type="dot"
            />
          </span>
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id_instructions"
        >
          State: unsaved. Use the Up and Down arrow keys to move focus over options. Press Enter to select. Press Escape to collapse options.
        </p>
      </div>
    </div>
  </div>
</div>
`;
